omveria changes to url images

--- a/omveria/index.html
+++ b/omveria/index.html
@@ -18,7 +18,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <img src="../new/images/logo.png" style="margin-left:100px;">
+      <img src="images/logo.png" style="margin-left:100px;">
       </div>
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
@@ -40,7 +40,7 @@
       <p class="sto">The web has evolved to deliver customized content based on user behavior. In this age of hyper-mobility, beacons promise contextual enrichment and personalized engagement with your customers.</p>
    <div class="row evo">
    <div class="col-lg-4 evolution">
-        <img src="../new/images/evolution.png">
+        <img src="images/evolution.png">
    </div>
     <div class="col-lg-8 bol">
         <p><b>OMVERIA</b> provides a cutting-edge Dynamic Mobile Framework combining iBeacon
@@ -57,7 +57,7 @@ And every time a user downloads one OMVERIA APP it solves the download problem f
 </div> 
 <div class="crowd">
   <div class="more">
-   <img src="../new/images/more-about-logo.png"><br>
+   <img src="images/more-about-logo.png"><br>
    <span>Find out more about OMVERIA for</span><br>
     <div class="totbox">
      <a href="#" class="box">SMALL BUSINESS</a> 
@@ -74,7 +74,7 @@ Virtually every one of these businesses needs a mobile app.</p>
   <div class="container">
   <div class="row maps">  
     <div class="col-lg-6 mbg">
-      <img src="../new/images/map.png">
+      <img src="images/map.png">
     </div>
     <div class="col-lg-6 problem">
     <p><b>The Problem is :</b></p>
